Play around with the Config object for a blog post